--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,10 +1,14 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="login-page">
   <div class="form">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
+<!--    <form class="registro"> -->
+	<form action="" method="post" novalidate>    	
+		<label for="name">Nombre: </label>
+        <input type="text" id="username" name="username" /><br>
+        <label for="email">Email: </label>
+        <input type="text" id="email" name="email" /><br>
+        <label for="password">Contraseña: </label>
+        <input type="password" id="password" name="password" /><br>
       <button>login</button>
       <p class="message">Already registered? <a href="/">Sign In</a></p>
     </form>
