--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,7 +1,8 @@
+<!--
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="login-page">
   <div class="form">
-<!--    <form class="registro"> -->
+
 	<form action="" method="post" novalidate>    	
 		<label for="name">Nombre: </label>
         <input type="text" id="username" name="username" /><br>
@@ -14,3 +15,40 @@
     </form>
   </div>
 </div>
+-->
+{% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<div class="login-page">
+  <div class="form">
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <div>
+            {{ form.username.label }}  
+            {{ form.username }}<br>
+            {% for error in form.username.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.email.label }}
+            {{ form.email }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.password.label }}
+            {{ form.password }}<br>
+            {% for error in form.password.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            <button style="background: #4CAF50; color: #FFFFFF;">{{ form.submit() }}</button>
+        </div>
+            <p class="message">Already registered? <a href="/">Sign In</a></p>
+    </form>
+  </div>
+</div>
+{% endblock %}
+
