--- a/templates/home.html
+++ b/templates/home.html
@@ -1,54 +1,14 @@
-<!--<script src="{{url_for('static', filename='func.js')}}"></script>  
-<script src="{{url_for('static', filename='func.js')}}"></script>  
-      <script type="text/javascript">
-        $(document).ready(function()
-        {
-          $('.message a').click(function()
-          {
-            $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
-            $('#idMensajeError').hide();
-          });
-        });
-      </script> 
-
-
-<html>
-<body>
+{% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="login-page">
   <div class="form">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-      <p class="message">Not registered? <a href="registro">Create an account</a></p>
-    </form>
-  </div>
-</div> 
-<html>
-<body>
--->
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <div>
 
-<html>
-  <head>
-    <title>Flask Intro - login page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Please login</h1>
-      <br>
-      <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
-    </div>
-  </body>
-</html>
+        </div>
+    </form>
+    <h1>{{info}}</h1>
+  </div>
+</div>
+{% endblock %}
