--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,22 +1,4 @@
-<!--
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<div class="login-page">
-  <div class="form">
-
-	<form action="" method="post" novalidate>    	
-		<label for="name">Nombre: </label>
-        <input type="text" id="username" name="username" /><br>
-        <label for="email">Email: </label>
-        <input type="text" id="email" name="email" /><br>
-        <label for="password">Contraseña: </label>
-        <input type="password" id="password" name="password" /><br>
-      <button>login</button>
-      <p class="message">Already registered? <a href="/">Sign In</a></p>
-    </form>
-  </div>
-</div>
--->
-{% block content %}
+ {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="login-page">
   <div class="form">
@@ -44,10 +26,11 @@
             {% endfor %}
         </div>
         <div>
-            <button style="background: #4CAF50; color: #FFFFFF;">{{ form.submit() }}</button>
+            <button style="background: #4CAF50;background-color:#FFFEEE">{{ form.submit() }}</button>
         </div>
             <p class="message">Already registered? <a href="/">Sign In</a></p>
     </form>
+    <h1>{{info}}</h1>
   </div>
 </div>
 {% endblock %}
