--- a/templates/registro.html
+++ b/templates/registro.html
@@ -28,7 +28,7 @@
         <div>
             <button style="background: #4CAF50;background-color:#FFFEEE">{{ form.submit() }}</button>
         </div>
-            <p class="message">Already registered? <a href="/">Sign In</a></p>
+            <p class="message">Already registered? <a href="/user">Sign In</a></p>
     </form>
     <h1>{{info}}</h1>
   </div>
