--- a/templates/ingresar.html
+++ b/templates/ingresar.html
@@ -21,7 +21,7 @@
         <div>
             <button style="background: #4CAF50;background-color:#FFFEEE">{{ form.submit()}}</button>
         </div>
-      <p class="message">Not registered? <a href="registro">Create an account</a></p>
+      <p class="message">Not registered? <a href="/registro/">Create an account</a></p>
     </form>
     <h1>{{info}}</h1>
   </div>
