--- a/templates/home.html
+++ b/templates/home.html
@@ -2,19 +2,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="login-page">
-  <div class="form">
+
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <div>
           <p class="message"><a href="/logout">log out?</a></p>
-          <p class="message"><a href={{route}}>upload</a></p>
-
-
-
-          <img src="{{url_for('get_file' , filename=image_name)}}" style="width:48px;height:48px;">
+          <p class="message"><a href={{route}}>upload</a></p>          
         </div>
     </form>
+
+    <form action="" method="post" novalidate>
+      {{ form.hidden_tag() }}
+      <div>
+        <input type="text" id="especie" name="especie" placeholder="especie"/>
+        <input type="text" id="seguridad" name="seguridad" placeholder="seguridad"/>
+        <button>add</button>
+      </div>
+    </form>
+
+    <form action="" method="post" novalidate>
+      {% for i in images %}
+          <img src="{{url_for('get_file' , filename=i)}}" style="width:48px;height:48px;">
+            <script> 
+                function sleep(milliseconds) { 
+                    let timeStart = new Date().getTime(); 
+                    while (true) { 
+                        let elapsedTime = new Date().getTime() - timeStart; 
+                        if (elapsedTime > milliseconds) { 
+                            break; 
+                        } 
+                    } 
+                } 
+          
+                console.log("Hello World"); 
+                console.log("Sleeping for 5000 milliseconds"); 
+          
+                // sleep for 5000 miliiseconds 
+                sleep(1000); 
+          
+                console.log("Sleep completed successfully"); 
+            </script>                 
+      {% endfor %}
+     </form> 
+    
     <h1>{{info}}</h1>
   </div>
-</div>
+
 {% endblock %}
+
+
+
+
+
+
+
