--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,36 @@
 {% block content %}
 <html xmlns="http://www.w3.org/1999/xhtml">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<div class="login-page">
+<head>
+<style>
+*{
+  box-sizing: border-box;
+}
+.body {
+  background-color: #FF0000;
+  color: rgb(255,255,204);
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.form{
+  width : 50%;
+}
+</style>
+</head>
 
+
+<body>
+<div class="login-page">
+{% set pepe = 1 %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <div>
@@ -13,11 +41,25 @@
 
     <form action="" method="post" novalidate>
       {{ form.hidden_tag() }}
-      <div>
+
         <input type="text" id="especie" name="especie" placeholder="especie"/>
         <input type="text" id="seguridad" name="seguridad" placeholder="seguridad"/>
-        <button name="one" id="one">presionar<button/>
-        <p><input type="image" name="botondeenvio" src="{{url_for('get_file' , filename=images[0])}}" alt="Enviar formulario" style="width:48px;height:48px;"></p>
+        <li><input type="submit" name="agregar" id="agregar" value="agregar"/>
+        <input type="submit" name="one1" id="one1" value="borrar"/></li>
+        <div class="row">
+        {% for i in images %}
+            {% set j = j + 1 %}
+            <div class = "column">
+            <p><input type="image" id="botondeenvio" name={{loop.index}}  src="{{url_for('get_file' , filename=i[loop.index-1][0])}}" alt="Enviar formulario" style="width:100px;height:100px;"></p>
+
+            <!--{{ form.loop }}
+            {{ loop.index }}-->
+
+            <p><input type="hidden" name={{loop.index}} id=loop.index/></p>
+            
+            <p>{{ especies[loop.index - 1] }}<p>
+            </div>
+        {% endfor %}
       </div>
     </form>
 
@@ -25,7 +67,7 @@
 <!--    <p class="message">-> <a href="/timelapse/images">Timelapse</a></p>-->
     <h1>{{info}}</h1>
   </div>
-
+</body>
 {% endblock %}
 
 
