--- a/templates/timelapse.html
+++ b/templates/timelapse.html
@@ -2,7 +2,7 @@
 <html lang="es">  
 <head>  
     <meta charset="UTF-8">
-    <title>lightSlider</title>
+    <title>{{Informacion}}</title>
     <script
   src="https://code.jquery.com/jquery-1.11.0.js"
   integrity="sha256-zgND4db0iXaO7v4CLBIYHGoIIudWI5hRMQrPB20j0Qw="
